--- a/Filip portfolio/index.html
+++ b/Filip portfolio/index.html
@@ -21,7 +21,7 @@
                     <a href="index.html" class="menu-nav__link">Home</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="index.html" class="menu-nav__link">About me</a>
+                    <a href="about.html" class="menu-nav__link">About me</a>
                 </li>
                 <li class="menu-nav__item">
                     <a href="index.html" class="menu-nav__link">My Projects</a>
