--- a/Filip portfolio/about.html
+++ b/Filip portfolio/about.html
@@ -20,14 +20,14 @@
                 <li class="menu-nav__item">
                     <a href="index.html" class="menu-nav__link">Home</a>
                 </li>
-                <li class="menu-nav__item active">
-                    <a href="about.html" class="menu-nav__link">About me</a>
+                <li class="menu-nav__item">
+                    <a href="about.html" class="menu-nav__link active">About me</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="index.html" class="menu-nav__link">My Projects</a>
+                    <a href="projects.html" class="menu-nav__link">My Projects</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="index.html" class="menu-nav__link">Contact me</a>
+                    <a href="contact.html" class="menu-nav__link">Contact me</a>
                 </li>
             </ul>
         </nav>
