--- a/Filip portfolio/index.html
+++ b/Filip portfolio/index.html
@@ -17,17 +17,17 @@
 
         <nav class="nav">
             <ul class="menu-nav">
-                <li class="menu-nav__item active">
-                    <a href="index.html" class="menu-nav__link">Home</a>
+                <li class="menu-nav__item">
+                    <a href="index.html" class="menu-nav__link active">Home</a>
                 </li>
                 <li class="menu-nav__item">
                     <a href="about.html" class="menu-nav__link">About me</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="index.html" class="menu-nav__link">My Projects</a>
+                    <a href="projects.html" class="menu-nav__link">My Projects</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="index.html" class="menu-nav__link">Contact me</a>
+                    <a href="contact.html" class="menu-nav__link">Contact me</a>
                 </li>
             </ul>
         </nav>
