making website responsive || creating responsive.scss moving html files to new pages folder

--- a/Filip portfolio/pages/about.html
+++ b/Filip portfolio/pages/about.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Personal portfolio of Filip Drábek. Front-end developer">
     <meta name="author" content="Filip Drábek">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css"> 
+    <link rel="stylesheet" href="../main.css"> 
     <title>About Filip Drábek</title>
 </head>
 <body>
@@ -18,16 +18,16 @@
         <nav class="nav">
             <ul class="menu-nav">
                 <li class="menu-nav__item">
-                    <a href="index.html" class="menu-nav__link">Home</a>
+                    <a href="./index.html" class="menu-nav__link">Home</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="about.html" class="menu-nav__link active">About me</a>
+                    <a href="./about.html" class="menu-nav__link active">About me</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="projects.html" class="menu-nav__link">My Projects</a>
+                    <a href="./projects.html" class="menu-nav__link">My Projects</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="contact.html" class="menu-nav__link">Contact me</a>
+                    <a href="./projects.html" class="menu-nav__link">Contact me</a>
                 </li>
             </ul>
         </nav>
@@ -36,11 +36,11 @@
     <main>
         <section class="about">
 
-            <div class="about__bio-image">
-                <div class="about__bio">
-                    <h2 class="text-secondary">BIO</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad facere dolorum incidunt cupiditate explicabo et ducimus. Voluptatibus quam quidem explicabo inventore, deserunt non deleniti reprehenderit dolore facilis, omnis voluptate ullam.</p>
-                </div>
+            <div class="about__bio-image"></div>
+
+            <div class="about__bio">
+                <h2 class="text-secondary">BIO</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad facere dolorum incidunt cupiditate explicabo et ducimus. Voluptatibus quam quidem explicabo inventore, deserunt non deleniti reprehenderit dolore facilis, omnis voluptate ullam.</p>
             </div>
 
             <div class="jobs">
@@ -81,7 +81,7 @@
         </section>
     </main>
 
-<script src="./js/main.js"></script>
+<script src="../js/main.js"></script>
 <script src="https://kit.fontawesome.com/98532ba50e.js" crossorigin="anonymous"></script>
 
 </body>
