--- a/Filip portfolio/pages/index.html
+++ b/Filip portfolio/pages/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Personal portfolio of Filip Drábek. Front-end developer">
     <meta name="author" content="Filip Drábek">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css"> 
-    <title>Contact Filip Drábek</title>
+    <link rel="stylesheet" href="../main.css"> 
+    <title>Filip Drábek portfolio</title>
 </head>
 <body>
     <header>
@@ -18,44 +18,30 @@
         <nav class="nav">
             <ul class="menu-nav">
                 <li class="menu-nav__item">
-                    <a href="index.html" class="menu-nav__link">Home</a>
+                    <a href="./index.html" class="menu-nav__link active">Home</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="about.html" class="menu-nav__link">About me</a>
+                    <a href="./about.html" class="menu-nav__link">About me</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="projects.html" class="menu-nav__link">My Projects</a>
+                    <a href="./projects.html" class="menu-nav__link">My Projects</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="contact.html" class="menu-nav__link active">Contact me</a>
+                    <a href="./contact.html" class="menu-nav__link">Contact me</a>
                 </li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="contact">
-            <div class="contact__wrapper">
-                <div class="contact__text p1">
-                    <h1 class="text-primary">Contact me..</h1>
-                </div>
-
-                <div class="contact__mail p1">
-                    <h2 class="text-primary"><i class="fas fa-envelope"></i>Mail</h2>
-                    <a class="text-secondary" href="mailto:drabekfilip@seznam.cz">drabekfilip@seznam.cz</a>
-                </div>
-
-                <div class="contact__tel p1">
-                    <h2 class="text-primary"><i class="fas fa-mobile-alt"></i>Telephone</h2>
-                    <a class="text-secondary" href="tel:+420774146121">+420 774 146 121</a>
-                </div>
-                
-                <div class="contact__adress p1">
-                    <h2 class="text-primary"><i class="fas fa-marker-alt"></i>Adress</h2>
-                    <a class="text-secondary" href="#">123 45 city street</a>
-                </div>
-            </div>
-
+        <section class="home">
+            <h2>Hi! My name is</h2>
+            <h1 class="home__name">Filip 
+                <span class="home__name--last">Drábek</span>
+            </h1>
+            <h2>
+                Web developer, Front-end developer
+            </h2>
             <div class="social-icons">
                 <a href="https://github.com/F1L1P0">
                     <i class="fab fa-github fa-2x"></i>
@@ -73,7 +59,7 @@
         </section>
     </main>
 
-<script src="./js/main.js"></script>
+<script src="../js/main.js"></script>
 <script src="https://kit.fontawesome.com/98532ba50e.js" crossorigin="anonymous"></script>
 
 </body>
