added links of my projects and colaborations

--- a/Filip portfolio/pages/projects.html
+++ b/Filip portfolio/pages/projects.html
@@ -36,13 +36,26 @@
     <main>
         <section class="projects">
             <div class="projects__text">
-                <h1 class="text-secondary">My projects</h1>
+                <h1 class="text-secondary">My projects and collaborations</h1>
             </div>
             <div class="projects__items">
                 <div class="projects__item">
                     <img src="https://picsum.photos/600/400" alt="My projects">
                     <div class="projects__btns">
+                        <a href="https://www.semag.cz/" class="projects__btn">
+                            <i class="fas fa-eye"></i>Prewiew
+                        </a>
                         <a href="#!" class="projects__btn">
+                            <i class="fab fa-github"></i>Github
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="projects__items">
+                <div class="projects__item">
+                    <img src="https://picsum.photos/600/400" alt="My projects">
+                    <div class="projects__btns">
+                        <a href="https://www.stratilek.cz/" class="projects__btn">
                             <i class="fas fa-eye"></i>Prewiew
                         </a>
                         <a href="#!" class="projects__btn">
@@ -68,20 +81,7 @@
                 <div class="projects__item">
                     <img src="https://picsum.photos/600/400" alt="My projects">
                     <div class="projects__btns">
-                        <a href="#!" class="projects__btn">
-                            <i class="fas fa-eye"></i>Prewiew
-                        </a>
-                        <a href="#!" class="projects__btn">
-                            <i class="fab fa-github"></i>Github
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="projects__items">
-                <div class="projects__item">
-                    <img src="https://picsum.photos/600/400" alt="My projects">
-                    <div class="projects__btns">
-                        <a href="#!" class="projects__btn">
+                        <a href="www.vratjimjiskru.cz" class="projects__btn">
                             <i class="fas fa-eye"></i>Prewiew
                         </a>
                         <a href="#!" class="projects__btn">
