projects heading adding padding so text doesnt collide with hamburger + github line through for projects which does not have working git hub anchor

--- a/Filip portfolio/pages/projects.html
+++ b/Filip portfolio/pages/projects.html
@@ -45,7 +45,7 @@
                         <a href="https://www.semag.cz/" class="projects__btn">
                             <i class="fas fa-eye"></i>Prewiew
                         </a>
-                        <a href="#!" class="projects__btn">
+                        <a href="#!" class="projects__btn line-through">
                             <i class="fab fa-github"></i>Github
                         </a>
                     </div>
@@ -58,7 +58,7 @@
                         <a href="https://www.stratilek.cz/" class="projects__btn">
                             <i class="fas fa-eye"></i>Prewiew
                         </a>
-                        <a href="#!" class="projects__btn">
+                        <a href="#!" class="projects__btn line-through">
                             <i class="fab fa-github"></i>Github
                         </a>
                     </div>
@@ -71,7 +71,7 @@
                         <a href="#!" class="projects__btn">
                             <i class="fas fa-eye"></i>Prewiew
                         </a>
-                        <a href="#!" class="projects__btn">
+                        <a href="#!" class="projects__btn line-through">
                             <i class="fab fa-github"></i>Github
                         </a>
                     </div>
@@ -84,7 +84,7 @@
                         <a href="www.vratjimjiskru.cz" class="projects__btn">
                             <i class="fas fa-eye"></i>Prewiew
                         </a>
-                        <a href="#!" class="projects__btn">
+                        <a href="#!" class="projects__btn line-through">
                             <i class="fab fa-github"></i>Github
                         </a>
                     </div>
@@ -97,7 +97,7 @@
                         <a href="#!" class="projects__btn">
                             <i class="fas fa-eye"></i>Prewiew
                         </a>
-                        <a href="#!" class="projects__btn">
+                        <a href="#!" class="projects__btn line-through">
                             <i class="fab fa-github"></i>Github
                         </a>
                     </div>
