folder structure moving

--- a/Filip portfolio/pages/contact.html
+++ b/Filip portfolio/pages/contact.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
-      content="Personal portfolio of Filip Drábek. Front-end developer"
-    />
+      content="Personal portfolio of Filip Drábek. Front-end developer" />
     <meta name="author" content="Filip Drábek" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../main.css" />
@@ -21,7 +20,7 @@
       <nav class="nav">
         <ul class="menu-nav">
           <li class="menu-nav__item">
-            <a href="./index.html" class="menu-nav__link">Home</a>
+            <a href="../index.html" class="menu-nav__link">Home</a>
           </li>
           <li class="menu-nav__item">
             <a href="./about.html" class="menu-nav__link">About me</a>
@@ -88,7 +87,6 @@
     <script src="../js/main.js"></script>
     <script
       src="https://kit.fontawesome.com/98532ba50e.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </body>
 </html>
