--- a/Filip portfolio/index.html
+++ b/Filip portfolio/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
-      content="Personal portfolio of Filip Drábek. Front-end developer"
-    />
+      content="Personal portfolio of Filip Drábek. Front-end developer" />
     <meta name="author" content="Filip Drábek" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../main.css" />
+    <link rel="stylesheet" href="./main.css" />
     <title>Filip Drábek portfolio</title>
   </head>
   <body>
@@ -21,16 +20,18 @@
       <nav class="nav">
         <ul class="menu-nav">
           <li class="menu-nav__item">
-            <a href="./index.html" class="menu-nav__link active">Home</a>
+            <a href="index.html" class="menu-nav__link active">Home</a>
           </li>
           <li class="menu-nav__item">
-            <a href="./about.html" class="menu-nav__link">About me</a>
+            <a href="./pages/about.html" class="menu-nav__link">About me</a>
           </li>
           <li class="menu-nav__item">
-            <a href="./projects.html" class="menu-nav__link">My Projects</a>
+            <a href="./pages/projects.html" class="menu-nav__link"
+              >My Projects</a
+            >
           </li>
           <li class="menu-nav__item">
-            <a href="./contact.html" class="menu-nav__link">Contact me</a>
+            <a href="./pages/contact.html" class="menu-nav__link">Contact me</a>
           </li>
         </ul>
       </nav>
@@ -63,7 +64,6 @@
     <script src="../js/main.js"></script>
     <script
       src="https://kit.fontawesome.com/98532ba50e.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </body>
 </html>
