--- a/Filip portfolio/pages/about.html
+++ b/Filip portfolio/pages/about.html
@@ -37,7 +37,7 @@
 
     <main>
       <section class="about">
-        <div style="max-height: 7rem" class="about__bio-image"></div>
+        <div class="about__bio-image"></div>
 
         <div class="about__bio">
           <h2 class="text-secondary">BIO</h2>
